--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Calculate Hypotenuse</h1>
-    <label>a=</label>
+    <label>a(in cm)=</label>
     <input type="number" class="side-input">
-    <label>b=</label>
+    <label>b(in cm)=</label>
     <input type="number" class="side-input">
     <button id="hypotenuse-btn">Calculate Hypotenuse</button>
     <div id="output"></div>
