--- a/area.html
+++ b/area.html
@@ -7,6 +7,12 @@
     <title>Area</title>
 </head>
 <body>
+    <nav>
+        <a href="/index.html">Is Triangle?</a>
+        <a href="/quiz.html">Quiz</a>
+        <a href="/hypotenuse.html">Hypotenuse</a>
+        <a href="/area.html">Area</a>
+    </nav>
     <h1>Check Area of a Triangle</h1>
     <label>Base(in cm)</label>
     <input type="number" class="side-input">
