--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -7,6 +7,12 @@
     <title>Hypotenuse</title>
 </head>
 <body>
+    <nav>
+        <a href="/index.html">Is Triangle?</a>
+        <a href="/quiz.html">Quiz</a>
+        <a href="/hypotenuse.html">Hypotenuse</a>
+        <a href="/area.html">Area</a>
+    </nav>
     <h1>Calculate Hypotenuse</h1>
     <label>a(in cm)=</label>
     <input type="number" class="side-input">
