--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Is Triangle?</title>
 </head>
 <body>
+    <nav>
+        <a href="/index.html">Is Triangle?</a>
+        <a href="/quiz.html">Quiz</a>
+        <a href="/hypotenuse.html">Hypotenuse</a>
+        <a href="/area.html">Area</a>
+    </nav>
     <h1>Is Triangle?</h1>
     <label for="angle1">Angle One:</label>
     <input type="number" class="angle-input">
