--- a/quiz.html
+++ b/quiz.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <nav>
+        <a href="/index.html">Is Triangle?</a>
+        <a href="/quiz.html">Quiz</a>
+        <a href="/hypotenuse.html">Hypotenuse</a>
+        <a href="/area.html">Area</a>
+    </nav>
     <h1>Triangle Quiz</h1>
     <form class="quiz-form">
         <div class="question-container">
