--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Is Triangle?</title>
 </head>
 <body>
@@ -13,15 +14,17 @@
         <a href="/hypotenuse.html">Hypotenuse</a>
         <a href="/area.html">Area</a>
     </nav>
-    <h1>Is Triangle?</h1>
-    <label for="angle1">Angle One:</label>
-    <input type="number" class="angle-input">
-    <label for="angle2">Angle Two:</label>
-    <input type="number" class="angle-input">
-    <label for="angle3">Angle Three:</label>
-    <input type="number" class="angle-input">
-    <button id="is-triangle-btn">Is Triangle?</button>
-    <div id="output"></div>
-    <script src="/app.js"></script>
+    <div class="container">
+        <h1>Is Triangle?</h1>
+        <label for="angle1">Angle One:</label>
+        <input type="number" class="angle-input">
+        <label for="angle2">Angle Two:</label>
+        <input type="number" class="angle-input">
+        <label for="angle3">Angle Three:</label>
+        <input type="number" class="angle-input">
+        <button id="is-triangle-btn">Is Triangle?</button>
+        <div id="output"></div>
+    </div>
+    <script src="/isTriangle.js"></script>
 </body>
 </html>
