--- a/area.html
+++ b/area.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Area</title>
 </head>
+
 <body>
     <nav>
         <a href="/index.html">Is Triangle?</a>
@@ -13,13 +16,16 @@
         <a href="/hypotenuse.html">Hypotenuse</a>
         <a href="/area.html">Area</a>
     </nav>
-    <h1>Check Area of a Triangle</h1>
-    <label>Base(in cm)</label>
-    <input type="number" class="side-input">
-    <label>Height(in cm)</label>
-    <input type="number" class="side-input">
-    <button id="area-btn">Check Area</button>
-    <div id="output"></div>
+    <div class="container">
+        <h1>Check Area of a Triangle</h1>
+        <label>Base(in cm)</label>
+        <input type="number" class="side-input">
+        <label>Height(in cm)</label>
+        <input type="number" class="side-input">
+        <button id="area-btn">Check Area</button>
+        <div id="output"></div>
+    </div>
     <script src="/area.js"></script>
 </body>
+
 </html>
