--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Hypotenuse</title>
 </head>
+
 <body>
     <nav>
         <a href="/index.html">Is Triangle?</a>
@@ -13,13 +16,16 @@
         <a href="/hypotenuse.html">Hypotenuse</a>
         <a href="/area.html">Area</a>
     </nav>
-    <h1>Calculate Hypotenuse</h1>
-    <label>a(in cm)=</label>
-    <input type="number" class="side-input">
-    <label>b(in cm)=</label>
-    <input type="number" class="side-input">
-    <button id="hypotenuse-btn">Calculate Hypotenuse</button>
-    <div id="output"></div>
+    <div class="container">
+        <h1>Calculate Hypotenuse</h1>
+        <label>a(in cm)=</label>
+        <input type="number" class="side-input">
+        <label>b(in cm)=</label>
+        <input type="number" class="side-input">
+        <button id="hypotenuse-btn">Calculate Hypotenuse</button>
+        <div id="output"></div>
+    </div>
     <script src="/hypotenuse.js"></script>
 </body>
+
 </html>
