--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Triangle Quiz</title>
 </head>
 
@@ -15,23 +16,25 @@
         <a href="/hypotenuse.html">Hypotenuse</a>
         <a href="/area.html">Area</a>
     </nav>
-    <h1>Triangle Quiz</h1>
-    <form class="quiz-form">
-        <div class="question-container">
-            <p>What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
-            <label><input type="radio" name="question1" value="45°">45°</label>
-            <label><input type="radio" name="question1" value="60°">60°</label>
-            <label><input type="radio" name="question1" value="90°">90°</label>
-        </div>
-        <div class="question-container">
-            <p>If a triangle has an angle of 90 degrees, what is it called?</p>
-            <label><input type="radio" name="question2" value="acute">acute</label>
-            <label><input type="radio" name="question2" value="obtuse">obtuse</label>
-            <label><input type="radio" name="question2" value="right-angled">right-angled</label>
-        </div>
-    </form>
-    <button id="submit-answer-btn">Submit Answers</button>
-    <div id="output"></div>
+    <div class="container">
+        <h1>Triangle Quiz</h1>
+        <form class="quiz-form">
+            <div class="question-container inline">
+                <p>1. What is the third angle for the triangle where angle1 = 45° and angle2 = 45°?</p>
+                <label><input type="radio" name="question1" value="45°">45°</label>
+                <label><input type="radio" name="question1" value="60°">60°</label>
+                <label><input type="radio" name="question1" value="90°">90°</label>
+            </div>
+            <div class="question-container inline">
+                <p>2. If a triangle has an angle of 90 degrees, what is it called?</p>
+                <label><input type="radio" name="question2" value="acute">acute</label>
+                <label><input type="radio" name="question2" value="obtuse">obtuse</label>
+                <label><input type="radio" name="question2" value="right-angled">right-angled</label>
+            </div>
+        </form>
+        <button id="submit-answer-btn">Submit Answers</button>
+        <div id="output"></div>
+    </div>
     <script src="/quiz.js"></script>
 </body>
 
